# beast-worker

./: README.md  docker-compose.yaml
master/: CMakeLists.txt  Dockerfile  master.cpp
master-worker/: CMakeLists.txt  Dockerfile  worker.cpp
slave/: CMakeLists.txt  Dockerfile  slave.cpp
slave-worker/: CMakeLists.txt  Dockerfile  worker.cpp
tests/: CMakeLists.txt  Dockerfile  master.cpp  slave.cpp  tests.cpp
tests/include/: master.h  slave.h
tests/src/: CMakeLists.txt  master.cpp  slave.cpp
worker/: CMakeLists.txt  Dockerfile  worker.cpp
worker-2/: CMakeLists.txt  Dockerfile  worker.cpp
